src/test/deca/context/valid/valid_essentiel/protected_1.deca
// Description:
//    Programme de tests de l'utilisation des champs protected.
//

class A {
	protected int x;
	
	void init(){
		x = 1;
	}
	
}

