src/test/deca/context/invalid/invalid_essentiel/decl_method_1.deca
// Description:
//    Programme de test de declaration incorrect de méthode.
//

class A {
	void m(){}
}

class B extends A {
	int m(){}
}